fix whitespacing on the paragraphs

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -36,6 +36,7 @@ img {
 }
 
 p {
+  display: block;
   letter-spacing: 1px;
   line-height: 1.5rem;
 }
