--- a/src/css/about.css
+++ b/src/css/about.css
@@ -66,4 +66,8 @@
   .about-info p {
     width: 100%;
   }
+
+  .about-info p + p {
+    margin-top: 1em;
+  }
 }
